overflow fix

--- a/css/content.css
+++ b/css/content.css
@@ -6,7 +6,6 @@
   align-content: center;
   justify-content: center;
   width: 75%;
-  overflow-y: scroll;
 }
 
 .header {
